# Wai-

./: .gitignore  CMakeLists.txt  Makefile  README.md  WAI-  main.waim
src/: main.cpp
src/AST/: AST.cpp  AST.hpp
src/AST/Node/: ASTNode.hpp
src/AST/Node/Number/: NumberNode.cpp  NumberNode.hpp
src/AST/Node/Operator/Addition/: AdditionNode.cpp  AdditionNode.hpp
src/AST/Node/Operator/Multiplication/: MultiplicationNode.cpp  MultiplicationNode.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/Token/: Token.cpp  Token.hpp
src/Utils/: Utils.cpp  Utils.hpp
